--- a/src/components/Home/Features/Features.css
+++ b/src/components/Home/Features/Features.css
@@ -1,3 +1,15 @@
+
+.feature-title{
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    border-bottom:3px solid #618D2B;
+    width: 30%;
+    padding-bottom: 15px;
+    margin: 50px auto;
+    color: #212529;
+    
+}
+
 .feature-btn{
     background-color: #064C37;
     border: none;
