--- a/src/components/CheckOut/CheckOut.css
+++ b/src/components/CheckOut/CheckOut.css
@@ -1,11 +1,23 @@
 .check-out{
-    height: 80vh;
+    height: 100%;
     display: flex;
+    margin-top: 50px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     align-items: center;
     color: #064C37;
     font-family: "Oswald";
+}
+
+.submit-button{
+    background-color: #064C37;
+    color: #fff;
+}
+
+.submit-button:hover{
+    background-color: #fff;
+    border: 2px solid #064C37;
+    color: #064C37;
 }
 
